[package]
name = "proj5"
version = "0.1.4"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
repository = "https://github.com/fschutt/proj5"
homepage = "https://github.com/fschutt/proj5"
license = "MIT"
readme = "README.md"
description = "Pure Rust, type-safe alternative to PROJ.4"

[lib]
path = "src/lib.rs"

[profile.release]
panic = "abort"

[target.'cfg(target_arch = "wasm32")'.dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
scoped_threadpool = "0.1.*"
